Disable seamless mode; Enable Fullscreen; Pass microphone to remote environment

--- a/.ICAClient/wfclient.ini
+++ b/.ICAClient/wfclient.ini
@@ -10,6 +10,8 @@
 
 [WFClient]
 Version = 2
+AllowAudioInput=True
+UseFullScreen=True
 KeyboardLayout = (User Profile)
 KeyboardMappingFile = automatic.kbd
 KeyboardDescription = Automatic (User Profile)
