--- a/.ICAClient/All_Regions.ini
+++ b/.ICAClient/All_Regions.ini
@@ -625,7 +625,7 @@ AudioDisableInputEncoding=*
 ; These settings control the keyboard settings
 ;
 [Virtual Channels\Keyboard]
-TransparentKeyPassthrough=
+TransparentKeyPassthrough=Remote
 KeyPassthroughEscapeChar=
 KeyPassthroughEscapeShift=
 UseLocalIM=*
@@ -923,7 +923,7 @@ ComPort32=
 ; with applications running on the local machine
 ;
 [Virtual Channels\Seamless Windows]
-TWIMode=*
+TWIMode=false
 DisableMMMaximizeSupport=*
 TWIIgnoreWorkArea=*
 SetTWIFocusOnTitled=*
