Add german keyboard profile to have less keyboard mapping problems

--- a/.ICAClient/wfclient.ini
+++ b/.ICAClient/wfclient.ini
@@ -12,7 +12,7 @@
 Version = 2
 AllowAudioInput=True
 UseFullScreen=True
-KeyboardLayout = (User Profile)
+KeyboardLayout=GERMAN
 KeyboardMappingFile = automatic.kbd
 KeyboardDescription = Automatic (User Profile)
 KeyboardType=(Default)
