Use citrix in seamless mode

--- a/.ICAClient/All_Regions.ini
+++ b/.ICAClient/All_Regions.ini
@@ -923,7 +923,7 @@ ComPort32=
 ; with applications running on the local machine
 ;
 [Virtual Channels\Seamless Windows]
-TWIMode=false
+TWIMode=*
 DisableMMMaximizeSupport=*
 TWIIgnoreWorkArea=*
 SetTWIFocusOnTitled=*
