--- a/.ICAClient/wfclient.ini
+++ b/.ICAClient/wfclient.ini
@@ -11,7 +11,7 @@
 [WFClient]
 Version = 2
 AllowAudioInput=True
-UseFullScreen=True
+UseFullScreen=False
 KeyboardLayout=GERMAN
 KeyboardMappingFile = automatic.kbd
 KeyboardDescription = Automatic (User Profile)
